attempt to fix invisible buttons 11

--- a/assets/css/Mobile_overlayUI.css
+++ b/assets/css/Mobile_overlayUI.css
@@ -123,13 +123,13 @@
 #ring-control-left{
     /* left: var(--ring-ctrl-padding-x); */
     left: 200px;
-    background: var(--left-arrow-icon-url);
+    /* background: var(--left-arrow-icon-url);
     background-size: 100%, 100%;
     -o-background-size: 100%, 100%;
     -moz-background-size: 100%, 100%;
     -webkit-background-size: 100%, 100%;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center; */
     background-color: cyan;
     z-index: -1;
 }
